--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="navbar-extra">
       <a href="#" id="search-btn"><i data-feather="search"></i></a>
-      <a href="#" id="shopping-cart"><i data-feather="shopping-cart"></i></a>
+      <a href="#wa.me/+6281342627700" id="phone"><i data-feather="phone"></i></a>
       <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
     </div>
   </nav>
